dokuwiki/wiki-service.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: longyuan-wiki-service
  name: longyuan-wiki-service
  namespace: kube-devops
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    k8s-app: longyuan-wiki
